fixed login view: fixed borders, font size on small screens, added new background, shadows

--- a/app/styles/logIn.css
+++ b/app/styles/logIn.css
@@ -1,11 +1,16 @@
 body {
-    background-image: url('../res/backgroundLogIn.jpg');
+    background-color: #fff7de;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23ff9b00' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%231c1259' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23ff9b00' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%233f3776' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23ff9b00' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23625c93' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23ff9b00' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%238480b0' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23ff9b00' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23a7a5cd' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23ff9b00' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23cacaea' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    background-size: cover;
     min-height:100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    -moz-background-size: cover;
+    -moz-background-size: cover; 
 }
+
 
 h3 {
     margin: 30px 0px 15px 0px;
@@ -15,7 +20,7 @@ h3 {
 }
 
 .log-in-form {
-    margin-top: 40vh;
+    margin-top: 42vh;
     width: 90%;
     height: 390px;
     background: #fff;
@@ -24,8 +29,12 @@ h3 {
     transform: translate(-50%, -40%);
     position: absolute;
     box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 5px;
     border-width: 0px;
+    
+    -webkit-box-shadow: 9px 11px 79px -12px rgba(135,135,135,1);
+    -moz-box-shadow: 9px 11px 79px -12px rgba(135,135,135,1);
+    box-shadow: 9px 11px 79px -12px rgba(135,135,135,1);;
 }
 
 .log-in-inputs {
@@ -35,17 +44,17 @@ h3 {
 }
 
 .panel-footer {
-    margin-top: 25px;
+    margin-top: 27px;
     padding: 25px;
     text-align: center;
     display: block;
     font-size: 18px;
-    color: #878797;
+    color: #1c1259;
     font-weight: 150;
     background-color: #eeeeee;
     box-sizing: border-box;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .log-in-btn-position {
@@ -55,8 +64,8 @@ h3 {
 }
 
 .btn-primary {
-    margin-top: 10px;
-    border-radius: 10px;
+    /* margin-top: 10px; */
+    border-radius: 25px;
     font-size: 20px;
     height: 45px;
     border: none;
@@ -78,4 +87,14 @@ h3 {
 
 .log-in-btn-position {
     margin-top: 40px;
+}
+
+@media (max-width: 1200px) {
+    h3 {
+        font-size: 1.7em;
+    }
+    .panel-footer {
+        margin-top: 32px;
+        font-size: 1.2em;
+    }
 }
